samples/_failures_safe/1761723647_e0108d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42a0c97b.c: In function ‘main’:
./samples/SAFE/__tmp_42a0c97b.c:178:18: error: expected ‘;’ at end of input
  178 |             break
      |                  ^
      |                  ;
./samples/SAFE/__tmp_42a0c97b.c:178:13: error: expected declaration or statement at end of input
  178 |             break
      |             ^~~~~
./samples/SAFE/__tmp_42a0c97b.c:178:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_42a0c97b.c:178:13: error: expected declaration or statement at end of input
